add new feature

--- a/project/mainsite/posts/templates/news.html
+++ b/project/mainsite/posts/templates/news.html
@@ -30,7 +30,7 @@
 <h1>  {{  post.title  }} </h1>
 
 <div id="post">
-<a href="/posts/"+{{ post.title  }}>登入</a>
+<p>  {{  post.content |safe }} </p>
 </div>
 {% endif %}
 {%  endfor %}
