--- a/project/mainsite/templates/header.html
+++ b/project/mainsite/templates/header.html
@@ -35,7 +35,7 @@
 		{%  if  request.user.is_authenticated  %}
 		<li id="menu-item-177" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-177"><a > HI {{ request.user }}</a>
 
-		<li id="menu-item-177" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-177"><a href="/posts">Lecture</a></li>
+		<li id="menu-item-177" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-177"><a href="/posts">課程專區</a></li>
 		</li>	
 		{%  endif  %}
 		<li id="menu-item-14" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home menu-item-14"><a href="/">首頁</a></li>
