--- a/project/mainsite/templates/post.html
+++ b/project/mainsite/templates/post.html
@@ -26,7 +26,8 @@
     <div class="row">
 
 
- 
+{%  if  request.user.groups.all.0 %}
+
  {%  for post in news %}
 
 
@@ -48,6 +49,12 @@
 {% endif %}
 
 {%  endfor %}
+
+{% else %}
+<h1> You are not in any group. </h1>
+{% endif %}
+
+
 
 <!--
 
