--- a/project/mainsite/templates/header.html
+++ b/project/mainsite/templates/header.html
@@ -54,6 +54,9 @@
 <ul class="sub-menu">
 	<li id="menu-item-241" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-241"><a href="/">被動式收入系統</a></li>
 	<li id="menu-item-242" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-242"><a href="">專業交易員培訓</a></li>
+	
+	<li id="menu-item-241" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-241"><a href="{% url 'train_dealer' %}">交易員培訓</a></li>
+	<li id="menu-item-242" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-242"><a href="{% url 'train_boss' %}">當交易員的老闆</a></li>
 </ul>
 </li>
 <li id="menu-item-221" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-221"><a>會員專區</a>
